added full html structure

--- a/index.html
+++ b/index.html
@@ -14,16 +14,360 @@
     <title>4moms</title>
   </head>
   <body>
-    <nav>Navigation</nav>
-    <section class="hero">Hero</section>
-    <section class="icons">Icons</section>
-    <section class="categories">categories</section>
-    <section class="promo1">Promo 1</section>
-    <section class="promo2">Promo 2</section>
-    <section class="testimonial">Testimonial</section>
-    <section class="social">Social</section>
-    <section class="prefooter">Prefooter</section>
-    <section class="awards">Awards</section>
-    <footer>Footer</footer>
+    <nav>
+      <section class="banner">
+        <p>Free shipping on orders over $49</p>
+      </section>
+      <section class="menu">
+        <i class="fas fa-bars"></i>
+        <span class="menu-icon user"
+          ><svg
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8.9922 0C7.24482 0.00331996 5.53612 0.514712 4.07422 1.47189C2.61232 2.42906 1.46032 3.7907 0.758536 5.39096C0.0567518 6.99122 -0.164526 8.76103 0.121655 10.4848C0.407836 12.2086 1.18912 13.812 2.37036 15.0996C3.21401 16.0141 4.23793 16.7439 5.37761 17.2431C6.51728 17.7423 7.748 18 8.9922 18C10.2364 18 11.4671 17.7423 12.6068 17.2431C13.7465 16.7439 14.7704 16.0141 15.614 15.0996C16.7953 13.812 17.5766 12.2086 17.8627 10.4848C18.1489 8.76103 17.9276 6.99122 17.2259 5.39096C16.5241 3.7907 15.3721 2.42906 13.9102 1.47189C12.4483 0.514712 10.7396 0.00331996 8.9922 0ZM8.9922 16.2168C7.12589 16.2139 5.33344 15.4873 3.99203 14.1897C4.39929 13.1982 5.0921 12.3502 5.98242 11.7534C6.87274 11.1567 7.92037 10.838 8.9922 10.838C10.064 10.838 11.1117 11.1567 12.002 11.7534C12.8923 12.3502 13.5851 13.1982 13.9924 14.1897C12.651 15.4873 10.8585 16.2139 8.9922 16.2168ZM7.19034 7.20745C7.19034 6.85107 7.29601 6.5027 7.49401 6.20639C7.692 5.91007 7.97341 5.67912 8.30266 5.54275C8.6319 5.40637 8.9942 5.37068 9.34373 5.44021C9.69325 5.50973 10.0143 5.68135 10.2663 5.93334C10.5183 6.18534 10.6899 6.5064 10.7594 6.85592C10.829 7.20545 10.7933 7.56774 10.6569 7.89699C10.5205 8.22624 10.2896 8.50765 9.99326 8.70564C9.69695 8.90363 9.34857 9.00931 8.9922 9.00931C8.51432 9.00931 8.05601 8.81947 7.71809 8.48156C7.38018 8.14364 7.19034 7.68533 7.19034 7.20745ZM15.2176 12.613C14.4127 11.2362 13.1738 10.1652 11.695 9.56789C12.1537 9.04774 12.4526 8.40628 12.5558 7.72047C12.659 7.03467 12.5621 6.33365 12.2768 5.70154C11.9914 5.06943 11.5297 4.53309 10.9471 4.15687C10.3645 3.78064 9.68573 3.58052 8.9922 3.58052C8.29867 3.58052 7.61988 3.78064 7.03726 4.15687C6.45465 4.53309 5.99297 5.06943 5.70763 5.70154C5.42229 6.33365 5.3254 7.03467 5.42859 7.72047C5.53179 8.40628 5.83068 9.04774 6.28941 9.56789C4.81062 10.1652 3.57172 11.2362 2.76677 12.613C2.12525 11.5203 1.7863 10.2764 1.78475 9.00931C1.78475 7.09778 2.5441 5.26453 3.89576 3.91288C5.24742 2.56122 7.08067 1.80186 8.9922 1.80186C10.9037 1.80186 12.737 2.56122 14.0886 3.91288C15.4403 5.26453 16.1996 7.09778 16.1996 9.00931C16.1981 10.2764 15.8591 11.5203 15.2176 12.613Z"
+              fill="black"
+            />
+          </svg>
+        </span>
+        <a href="/" class="logo"
+          ><img src="http://placehold.it/50x50" alt="Logo"
+        /></a>
+        <span class="menu-icon search"
+          ><svg
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle cx="8" cy="8" r="7" stroke="black" stroke-width="2" />
+            <path
+              d="M17 17L13.5 13.5"
+              stroke="black"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </span>
+        <span class="menu-icon cart">
+          <svg
+            viewBox="0 0 20 19"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8.16726 17.4092C8.59402 17.4092 8.93999 17.0633 8.93999 16.6365C8.93999 16.2097 8.59402 15.8638 8.16726 15.8638C7.74049 15.8638 7.39453 16.2097 7.39453 16.6365C7.39453 17.0633 7.74049 17.4092 8.16726 17.4092Z"
+              stroke="black"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M16.6663 17.4092C17.093 17.4092 17.439 17.0633 17.439 16.6365C17.439 16.2097 17.093 15.8638 16.6663 15.8638C16.2395 15.8638 15.8936 16.2097 15.8936 16.6365C15.8936 17.0633 16.2395 17.4092 16.6663 17.4092Z"
+              stroke="black"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M1.98438 1.18188H5.07528L7.14619 11.5287C7.21685 11.8845 7.41039 12.204 7.69293 12.4315C7.97547 12.6589 8.329 12.7797 8.69165 12.7728H16.2026C16.5652 12.7797 16.9187 12.6589 17.2013 12.4315C17.4838 12.204 17.6773 11.8845 17.748 11.5287L18.9844 5.04552H5.84801"
+              stroke="black"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </span>
+      </section>
+    </nav>
+    <section class="hero">
+      <h1>Freeing up your hands. So you can do more.</h1>
+      <h4>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+        bibendum laoreet.
+      </h4>
+      <a href="/" class="hero-cta">Shop Bassinets</a>
+    </section>
+    <section class="icons">
+      <div class="icons-slider">
+        <div class="icon-slide-1">
+          <img src="/" alt="Design Icon" />
+          <h5>Functional Design</h5>
+          <p>Products designed to make parents lives easier</p>
+        </div>
+        <div class="icon-slide-2">
+          <img src="/" alt="Design Icon" />
+          <h5>Parent Tested</h5>
+          <p>Tested with real parents to ensure the best results</p>
+        </div>
+        <div class="icon-slide-3">
+          <img src="/" alt="Design Icon" />
+          <h5>Technology</h5>
+          <p>Tested w(FPO)arents to ensure the best results</p>
+        </div>
+      </div>
+    </section>
+    <section class="categories">
+      <div>
+        <a href="/">Shop Seats</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg> </span
+        ><img src="" alt="Seats" />
+      </div>
+      <div>
+        <a href="/">Shop Playards</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            /></svg></span
+        ><img src="" alt="Playards" />
+      </div>
+      <div>
+        <a href="/">Shop Feeding</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            /></svg></span
+        ><img src="" alt="Feeding" />
+      </div>
+      <div>
+        <a href="/">Shop Bassinets</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            /></svg></span
+        ><img src="" alt="Bassinets" />
+      </div>
+      <div>
+        <a href="/">Shop Tubs</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            /></svg></span
+        ><img src="" alt="Tubs" />
+      </div>
+      <div>
+        <a href="/">Shop Mobiles</a
+        ><span class="icon-arrow"
+          ><svg
+            viewBox="0 0 11 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1.01562L9.88606 10.6962L1.26427 20.7282"
+              stroke="black"
+              stroke-width="2"
+              stroke-miterlimit="10"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            /></svg></span
+        ><img src="" alt="Mobiles" />
+      </div>
+    </section>
+    <section class="promo1">
+      <img src="/" alt="rockaRoo" />
+      <div class="promo1-cta">
+        <img src="" alt="rockaRoo" />
+        <h5>rockaRoo®</h5>
+        <p>Back and forth gliding motion babies love, in a compact size.</p>
+        <a href="/" class="promo btn">Shop Now</a>
+      </div>
+    </section>
+    <section class="promo2">
+      <img src="/" alt="Playards" />
+      <div class="promo2-cta">
+        <img src="" alt="Playards" />
+        <h5>Playards</h5>
+        <p>Playards are hard to use. The breeze® plus is easy.</p>
+        <a href="/" class="promo btn">Shop Now</a>
+      </div>
+    </section>
+    <section class="testimonials">
+      <div>Stars</div>
+      <p>
+        My baby loves his mamaRoo! Smooth motions and great controls, easy to
+        use and assemble. I wish I would have had this with my first baby.
+      </p>
+      <p>Rachel N</p>
+      <div>Dots</div>
+    </section>
+    <section class="social">
+      <h4>The 4moms community</h4>
+      <div class="social-slider">
+        <div class="social-slide-1"><img src="/" alt="Baby" /></div>
+        <div class="social-slide-2"><img src="/" alt="Baby" /></div>
+        <div class="social-slide-3"><img src="/" alt="Baby" /></div>
+      </div>
+    </section>
+    <section class="prefooter">
+      <h4>We believe in better</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan.
+      </p>
+      <a href="/" class="prefooter-btn">Learn More</a>
+    </section>
+    <section class="awards">
+      <div class="social-slider">
+        <div class="awards-slide-1"><img src="/" alt="Logo" /></div>
+        <div class="awards-slide-2"><img src="/" alt="Logo" /></div>
+        <div class="awards-slide-3"><img src="/" alt="Logo" /></div>
+        <div class="awards-slide-4"><img src="/" alt="Logo" /></div>
+        <div class="awards-slide-5"><img src="/" alt="Logo" /></div>
+        <div class="awards-slide-6"><img src="/" alt="Logo" /></div>
+      </div>
+    </section>
+    <footer>
+      <img src="/" alt="4moms Logo" />
+      <div class="news-letter-signup">
+        <label for="signup">
+          <input type="text" />
+          <button type="submit">Submit <span class="arrow">></span></button>
+        </label>
+      </div>
+      <div class="social-media">
+        <a href="/">
+          <svg
+            viewBox="0 0 12 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2.90633 23.7754H7.53633V12.1754H10.7663L11.1063 8.29539H7.52632C7.52632 8.29539 7.52632 6.84539 7.52632 6.08539C7.52632 5.16539 7.70633 4.80539 8.59633 4.80539C9.30633 4.80539 11.1063 4.80539 11.1063 4.80539V0.775391C11.1063 0.775391 8.46633 0.775391 7.89633 0.775391C4.44633 0.775391 2.89632 2.29539 2.89632 5.19539C2.89632 7.72539 2.89632 8.29539 2.89632 8.29539H0.486328V12.2254H2.89632V23.7754H2.90633Z"
+              fill="white"
+            /></svg
+        ></a>
+        <a href="/"
+          ><svg
+            viewBox="0 0 21 17"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M0.416016 14.6456C2.25602 15.8256 4.44602 16.5156 6.79602 16.5156C14.516 16.5156 18.886 9.99565 18.626 4.13564C19.436 3.54564 20.146 2.81564 20.706 1.98564C19.956 2.31564 19.156 2.53565 18.316 2.63564C19.176 2.12564 19.836 1.30564 20.146 0.335645C19.346 0.815645 18.456 1.15564 17.506 1.34564C16.746 0.535645 15.666 0.0356445 14.466 0.0356445C11.776 0.0356445 9.80602 2.54564 10.416 5.14564C6.95601 4.97564 3.89602 3.31564 1.83602 0.795645C0.746016 2.66564 1.26602 5.11565 3.12602 6.35565C2.44602 6.33565 1.80602 6.14564 1.23602 5.83564C1.19602 7.76564 2.57602 9.56564 4.57602 9.96564C3.98602 10.1256 3.34602 10.1656 2.69602 10.0356C3.22602 11.6856 4.76602 12.8956 6.58602 12.9256C4.82602 14.2956 2.62602 14.9056 0.416016 14.6456Z"
+              fill="white"
+            />
+          </svg>
+        </a>
+        <a href="/"
+          ><svg
+            viewBox="0 0 22 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M10.6761 2.7257C13.4661 2.7257 13.7961 2.7357 14.8961 2.7857C15.9161 2.8357 16.4661 3.0057 16.8361 3.1457C17.3261 3.3357 17.6661 3.5657 18.0361 3.9257C18.4061 4.2957 18.6261 4.6357 18.8161 5.1257C18.9561 5.4957 19.1261 6.0457 19.1761 7.0657C19.2261 8.1657 19.2361 8.4957 19.2361 11.2857C19.2361 14.0757 19.2261 14.4057 19.1761 15.5057C19.1261 16.5257 18.9561 17.0757 18.8161 17.4457C18.6261 17.9357 18.3961 18.2757 18.0361 18.6457C17.6761 19.0057 17.3261 19.2357 16.8361 19.4257C16.4661 19.5657 15.9161 19.7357 14.8961 19.7857C13.7961 19.8357 13.4661 19.8457 10.6761 19.8457C7.8861 19.8457 7.5561 19.8357 6.4561 19.7857C5.4361 19.7357 4.8861 19.5657 4.5161 19.4257C4.0261 19.2357 3.6861 19.0057 3.3161 18.6457C2.9461 18.2757 2.7261 17.9357 2.5361 17.4457C2.3961 17.0757 2.2261 16.5257 2.1761 15.5057C2.1261 14.4057 2.11609 14.0757 2.11609 11.2857C2.11609 8.4957 2.1261 8.1657 2.1761 7.0657C2.2261 6.0457 2.3961 5.4957 2.5361 5.1257C2.7261 4.6357 2.9561 4.2957 3.3161 3.9257C3.6861 3.5557 4.0261 3.3357 4.5161 3.1457C4.8861 3.0057 5.4361 2.8357 6.4561 2.7857C7.5661 2.7357 7.8961 2.7257 10.6761 2.7257ZM10.6761 0.845703C7.8461 0.845703 7.4861 0.855703 6.3761 0.905703C5.2661 0.955703 4.5061 1.1357 3.8461 1.3957C3.1561 1.6657 2.57609 2.0157 1.99609 2.5957C1.41609 3.1757 1.0561 3.7557 0.796097 4.4457C0.536097 5.1057 0.366091 5.8657 0.306091 6.9757C0.256091 8.0857 0.246094 8.4457 0.246094 11.2757C0.246094 14.1057 0.256091 14.4657 0.306091 15.5757C0.356091 16.6857 0.536097 17.4457 0.796097 18.1057C1.0661 18.7957 1.41609 19.3757 1.99609 19.9557C2.57609 20.5357 3.1561 20.8957 3.8461 21.1557C4.5061 21.4157 5.2661 21.5857 6.3761 21.6457C7.4861 21.6957 7.8461 21.7057 10.6761 21.7057C13.5061 21.7057 13.8661 21.6957 14.9761 21.6457C16.0861 21.5957 16.8461 21.4157 17.5061 21.1557C18.1961 20.8857 18.7761 20.5357 19.3561 19.9557C19.9361 19.3757 20.2961 18.7957 20.5561 18.1057C20.8161 17.4457 20.9861 16.6857 21.0461 15.5757C21.0961 14.4657 21.1061 14.1057 21.1061 11.2757C21.1061 8.4457 21.0961 8.0857 21.0461 6.9757C20.9961 5.8657 20.8161 5.1057 20.5561 4.4457C20.2861 3.7557 19.9361 3.1757 19.3561 2.5957C18.7761 2.0157 18.1961 1.6557 17.5061 1.3957C16.8461 1.1357 16.0861 0.965703 14.9761 0.905703C13.8661 0.855703 13.5161 0.845703 10.6761 0.845703Z"
+              fill="white"
+            />
+            <path
+              d="M10.6764 5.91577C7.71641 5.91577 5.31641 8.31577 5.31641 11.2758C5.31641 14.2358 7.71641 16.6358 10.6764 16.6358C13.6364 16.6358 16.0364 14.2358 16.0364 11.2758C16.0364 8.31577 13.6364 5.91577 10.6764 5.91577ZM10.6764 14.7558C8.75641 14.7558 7.1964 13.1958 7.1964 11.2758C7.1964 9.35577 8.75641 7.79577 10.6764 7.79577C12.5964 7.79577 14.1564 9.35577 14.1564 11.2758C14.1564 13.1958 12.5964 14.7558 10.6764 14.7558Z"
+              fill="white"
+            />
+            <path
+              d="M17.5068 5.70581C17.5068 6.39581 16.9468 6.95581 16.2568 6.95581C15.5668 6.95581 15.0068 6.39581 15.0068 5.70581C15.0068 5.01581 15.5668 4.45581 16.2568 4.45581C16.9468 4.45581 17.5068 5.01581 17.5068 5.70581Z"
+              fill="white"
+            />
+          </svg>
+        </a>
+        <a href="/"
+          ><svg
+            viewBox="0 0 19 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M3.64679 14.0358C3.94679 14.1558 4.2068 14.0358 4.2968 13.7158C4.3568 13.4858 4.49679 12.9158 4.55679 12.6758C4.64679 12.3458 4.60679 12.2358 4.36679 11.9558C3.84679 11.3358 3.50679 10.5358 3.50679 9.4058C3.50679 6.1258 5.95679 3.1858 9.89679 3.1858C13.3868 3.1858 15.2968 5.3158 15.2968 8.1658C15.2968 11.9058 13.6368 15.0658 11.1768 15.0658C9.81679 15.0658 8.8068 13.9458 9.1268 12.5658C9.5168 10.9258 10.2768 9.1458 10.2768 7.9558C10.2768 6.8958 9.70679 6.0058 8.52679 6.0058C7.13679 6.0058 6.02679 7.4458 6.02679 9.3658C6.02679 10.5958 6.4368 11.4158 6.4368 11.4158C6.4368 11.4158 5.0168 17.4358 4.7668 18.4858C4.2668 20.5858 4.69679 23.1558 4.72679 23.4158C4.74679 23.5658 4.94679 23.6058 5.03679 23.4858C5.16679 23.3158 6.8168 21.2758 7.3768 19.2358C7.5368 18.6558 8.28679 15.6658 8.28679 15.6658C8.73679 16.5258 10.0568 17.2858 11.4568 17.2858C15.6268 17.2858 18.4668 13.4858 18.4668 8.3858C18.4668 4.5358 15.2068 0.945801 10.2468 0.945801C4.0768 0.945801 0.966797 5.3658 0.966797 9.0558C0.996797 11.3158 1.83679 13.2958 3.64679 14.0358Z"
+              fill="white"
+            />
+          </svg>
+        </a>
+        <a href="/"
+          ><svg
+            viewBox="0 0 32 23"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M30.3962 3.89541C30.0462 2.57541 29.0162 1.53541 27.7062 1.18541C25.3262 0.54541 15.8062 0.54541 15.8062 0.54541C15.8062 0.54541 6.27617 0.54541 3.90617 1.18541C2.59617 1.53541 1.56617 2.57541 1.21617 3.89541C0.576172 6.28541 0.576172 11.2754 0.576172 11.2754C0.576172 11.2754 0.576172 16.2654 1.21617 18.6554C1.56617 19.9754 2.59617 21.0154 3.90617 21.3654C6.28617 22.0054 15.8062 22.0054 15.8062 22.0054C15.8062 22.0054 25.3362 22.0054 27.7062 21.3654C29.0162 21.0154 30.0462 19.9754 30.3962 18.6554C31.0362 16.2654 31.0362 11.2754 31.0362 11.2754C31.0362 11.2754 31.0362 6.28541 30.3962 3.89541ZM12.6962 15.8054V6.74541L20.6562 11.2754L12.6962 15.8054Z"
+              fill="white"
+            />
+          </svg>
+        </a>
+      </div>
+      <ul class="footer-menu">
+        <li>Shop <span>+</span></li>
+        <li>
+          Shopping Help <span>-</span>
+          <ul>
+            <li>Find a Store</li>
+            <li>Account</li>
+            <li>Shipping & Returns</li>
+            <li>About Affirm Fianacing</li>
+          </ul>
+        </li>
+        <li>Support <span>+</span></li>
+        <li>Company <span>+</span></li>
+      </ul>
+      <div class="footer-info">
+        <p>© 2019 4moms. All Rights Reserved.</p>
+        <a href="/">Terms & Conditions</a><a href="">Privacy Policy</a>
+      </div>
+    </footer>
   </body>
 </html>
