added mobile styling of hero section

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       </section>
     </nav>
     <section class="hero">
-      <h1>Freeing up your hands. So you can do more.</h1>
-      <h4>
+      <h1>Freeing up your hands.<br />So you can do more.</h1>
+      <h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
         bibendum laoreet.
-      </h4>
+      </h2>
       <a href="/" class="hero-cta">Shop Bassinets</a>
     </section>
     <section class="icons">
